main page of each topic added

--- a/posts/art/تصویر-قدیمی-از-سیما-بینا-و-زنده‌یاد-عثمان-محمدپرست.md
+++ b/posts/art/تصویر-قدیمی-از-سیما-بینا-و-زنده‌یاد-عثمان-محمدپرست.md
@@ -3,6 +3,7 @@ title: "تصویر قدیمی از سیما بینا و زنده‌یاد عثم
 date: "1402-06-16"
 author: "کرن موزیک"
 link: "https://twitter.com/Koronmusic/status/1699301303325712440"
+topic: "art"
 ---
 
 سیما بینا و زنده‌یاد عثمان محمدپرست
