--- a/posts/art/رباعی-مولانا-و-نقاشی-ادوارد-هاپر.md
+++ b/posts/art/رباعی-مولانا-و-نقاشی-ادوارد-هاپر.md
@@ -3,6 +3,7 @@ title: "رباعی مولانا و نقاشی ادوارد هاپر"
 date: "1402-06-16"
 author: "Mehran"
 link: "https://twitter.com/MMehran/status/1698735127294312455"
+topic: "art"
 ---
 
 حضرت #مولانا خیلی به رباعیات‌ش مشهور نیست. اما این رباعی را احتمالاَ همه شنیده‌ایم:
