--- a/posts/art/نقاشی-قدیمی-ژاپنی-که-عشق-به-حیوانات-را-به-تصویر-میکشد.md
+++ b/posts/art/نقاشی-قدیمی-ژاپنی-که-عشق-به-حیوانات-را-به-تصویر-میکشد.md
@@ -3,6 +3,7 @@ title: "نقاشی قدیمی ژاپنی که عشق به حیوانات را ب
 date: "1402-06-16"
 author: "卩-ﾌ 隠 ſ-Ԁ"
 link: "https://twitter.com/DetectivePiJey/status/1699228977674543396"
+topic: "art"
 ---
 
 نقاشی قدیمی ژاپنی.
