--- a/posts/art/وقتی-هنر-دوست-داری-ولی-میگن-برو-تجربی.md
+++ b/posts/art/وقتی-هنر-دوست-داری-ولی-میگن-برو-تجربی.md
@@ -3,6 +3,7 @@ title: "وقتی هنر دوست داری ولی میگن برو تجربی"
 date: "1402-06-16"
 author: "JK;"
 link: "https://twitter.com/ItsJkluv/status/1699157499843322043"
+topic: "art"
 ---
 
 وقتی هنر دوست داری ولی میگن برو تجربی :
