--- a/posts/economic/قیمت-جهانی-طلا-امروز-18-06-1402.md
+++ b/posts/economic/قیمت-جهانی-طلا-امروز-18-06-1402.md
@@ -3,6 +3,7 @@ title: "قیمت جهانی طلا امروز ۱۴۰۲/۰۶/۱۸"
 date: "1402-06-18"
 author: "وبانگاه | هاب خبری"
 link: "https://twitter.com/webangah_farsi/status/1700406194160972149"
+topic: "economic"
 ---
 
 قیمت جهانی طلا امروز ۱۴۰۲/۰۶/۱۸
