--- a/posts/economic/قیمت-خودروهای-چینی-با-خاک-یکسان-شد.md
+++ b/posts/economic/قیمت-خودروهای-چینی-با-خاک-یکسان-شد.md
@@ -3,6 +3,7 @@ title: "قیمت خودروهای چینی با خاک یکسان شد"
 date: "1402-06-17"
 author: "ArashVeisi"
 link: "https://twitter.com/mmdveisi/status/1700061653801259450"
+topic: "economic"
 ---
 
 قیمت #خودروهای_چینی با خاک یکسان شد.
