--- a/posts/military/آماده-سازی-تایوان-برای-جنگ-با-چین.md
+++ b/posts/military/آماده-سازی-تایوان-برای-جنگ-با-چین.md
@@ -3,6 +3,7 @@ title: "آماده سازی تایوان برای جنگ با چین"
 date: "1402-06-18"
 author: "VIP"
 link: "https://twitter.com/iran_vip_fact/status/1698976704201449502"
+topic: "military"
 ---
 
 🇹🇼 #تایوان از هم اکنون خود را برای رویارویی با #چین آماده می کند
