--- a/posts/military/تصاویر-با-کیفیت-از-جنگنده-های-یاک-130-در-ایران .md
+++ b/posts/military/تصاویر-با-کیفیت-از-جنگنده-های-یاک-130-در-ایران .md
@@ -3,6 +3,7 @@ title: "تصاویر با کیفیت از جنگنده های یاک 130 در ا
 date: "1402-06-18"
 author: "MESHKAT"
 link: "https://twitter.com/mmdveisi/status/1700061653801259450"
+topic: "military"
 ---
 
 🔥 تصاویر با کیفیت بالا از جنگنده‌های یاک ۱۳۰ حاضر در پایگاه هوایی شهید بابایی اصفهان
