--- a/posts/military/تصاویری-از-رزمایش-مشترک-نیروی-هوایی-چین-و-پاکستان.md
+++ b/posts/military/تصاویری-از-رزمایش-مشترک-نیروی-هوایی-چین-و-پاکستان.md
@@ -3,6 +3,7 @@ title: "تصاویری از رزمایش مشترک نیروی هوایی چین
 date: "1402-06-18"
 author: "Partisan"
 link: "https://twitter.com/Partisan2015/status/1699087636936224905"
+topic: "military"
 ---
 
 تصاویری از رزمایش مشترک نیروی هوایی #چین و #پاکستان، شاهین-۱۰ 🇨🇳🇵🇰
