--- a/posts/military/روش-عجیب-روسها-برای-محافظت-از-هواپیماهای-جنگی-شان.md
+++ b/posts/military/روش-عجیب-روسها-برای-محافظت-از-هواپیماهای-جنگی-شان.md
@@ -3,6 +3,7 @@ title: "روش عجیب روسها برای محافظت از هواپیماها
 date: "1402-06-18"
 author: "Sina Noorikhani"
 link: "https://twitter.com/SinaNoorikhani/status/1698311702679285967"
+topic: "military"
 ---
 
 عقل روس، برای مقابله با پهپاد ها تایر خودرو ردیف کردن روی بمب افکن :)) تایری که در اثر اصابت خرج گود خودش مشتعل میشه و باعث آتش سوزی
