--- a/posts/politic/تماس-تلفنی-رئیسی-و-پاشینیان.md
+++ b/posts/politic/تماس-تلفنی-رئیسی-و-پاشینیان.md
@@ -3,6 +3,7 @@ title: "تماس تلفنی رئیسی و پاشینیان"
 date: "1402-06-18"
 author: "خبرگزاری تسنیم 🇮🇷"
 link: "https://twitter.com/Tasnimnews_Fa/status/1700468400818909363"
+topic: "politic"
 ---
 
 تماس تلفنی رئیسی و پاشینیان
