--- a/posts/politic/کودتایی-دیگر-در-یکی-از-کشورهای-آفریقایی-تحت-سلطه-ی-فرانسه.md
+++ b/posts/politic/کودتایی-دیگر-در-یکی-از-کشورهای-آفریقایی-تحت-سلطه-ی-فرانسه.md
@@ -3,6 +3,7 @@ title: "کودتایی دیگر در یکی از کشورهای آفریقایی
 date: "1402-06-18"
 author: "❦ུ رویای نیمه شبུ ❦"
 link: "https://twitter.com/Tanha_6655/status/1696784444856668416"
+topic: "politic"
 ---
 
 کودتایی دیگر در یکی از کشورهای آفریقایی تحت سلطه ی #فرانسه
