--- a/posts/social/از-در-اومده-تو-میگه-۲۳۴۵۶.md
+++ b/posts/social/از-در-اومده-تو-میگه-۲۳۴۵۶.md
@@ -3,6 +3,7 @@ title: "از در اومده تو میگه ۲۳۴۵۶"
 date: "1402-06-18"
 author: "Night lantern"
 link: "https://twitter.com/far_far_AvvAy/status/1679027794192334851"
+topic: "social"
 ---
 
 از در اومده تو میگه ۲۳۴۵۶، میگم چی؟ میگه کد نسخه مه.
