--- a/posts/social/هشتم-سپتامبر-روز-بدون-صدا.md
+++ b/posts/social/هشتم-سپتامبر-روز-بدون-صدا.md
@@ -3,6 +3,7 @@ title: "هشتم سپتامبر روز بدون صدا"
 date: "1402-06-18"
 author: "روزها"
 link: "https://twitter.com/Roozha365/status/1699995090146459797"
+topic: "social"
 ---
 
 ۸ سپتامبر #روز*بدون*صدا است. هدف این روز فاصله گرفتن از دنیای پر سر و صدایی است که در آن زندگی می‌کنیم. بوق ماشین، صدای بلند تلویزیون و هر چیزی که آرامش را بر هم می‌زند در این روز ممنوع است
