--- a/posts/sport/ورزشگاه-براگا.md
+++ b/posts/sport/ورزشگاه-براگا.md
@@ -1,8 +1,9 @@
 ---
 title: "ورزشگاه براگا"
 date: "1402-06-15"
-author: "تا خرتناق فوتبالی"
+author: "⚽️ تا‌‌ خرتناق فوتبالی ⚽️"
 link: "https://twitter.com/taakhertenagh/status/1697900600212496741"
+topic: "sport"
 ---
 
 ورزشگاه براگا یکی از رقبای رئال مادرید در لیگ قهرمانان اروپا.
