--- a/posts/sport/وینیسیوس-در-حال-تماشای-لیگ-عربستان.md
+++ b/posts/sport/وینیسیوس-در-حال-تماشای-لیگ-عربستان.md
@@ -3,6 +3,7 @@ title: "وینیسیوس در حال مشاهده لیگ عربستان"
 date: "1402-06-15"
 author: "Saman Esteghlali"
 link: "https://twitter.com/SEsteghlali/status/1697686497019723793"
+topic: "sport"
 ---
 
 وینیسیوس داره لیگ عربستان رو میبینه :))))))
