--- a/posts/technology/الهام-طبسی-در-لیست-100-فرد-تاثیرگذار-حوزه-هوش-مصنوعی.md
+++ b/posts/technology/الهام-طبسی-در-لیست-100-فرد-تاثیرگذار-حوزه-هوش-مصنوعی.md
@@ -3,6 +3,7 @@ title: "الهام طبسی در لیست 100 فرد تاثیرگذار حوزه
 date: "1402-06-17"
 author: "Digiato | دیجیاتو"
 link: "https://twitter.com/Digiato/status/1700085773863702713"
+topic: "technology"
 ---
 
 💯 «الهام طبسی» در لیست 100 فرد تأثیرگذار حوزه هوش مصنوعی سال 2023 مجله تایم قرار گرفت
