--- a/posts/technology/حضور-یک-قورباغه-در-تصویر-ثبت-شده-هنگام-پرتاب-موشک-ناسا.md
+++ b/posts/technology/حضور-یک-قورباغه-در-تصویر-ثبت-شده-هنگام-پرتاب-موشک-ناسا.md
@@ -3,6 +3,7 @@ title: "حضور یک قورباغه در تصویر ثبت شده هنگام پ
 date: "1402-06-17"
 author: "ناسا فارسی"
 link: "https://twitter.com/Nasa_Farsinews/status/1699873619357073790"
+topic: "technology"
 ---
 
 ده سال پیش در چنین روزی موشک ناسا (پروژه ی LADEE، بررسی ماه) پرتاب شد
