--- a/posts/technology/زبان-برنامه-نویسی-جدید-موجو.md
+++ b/posts/technology/زبان-برنامه-نویسی-جدید-موجو.md
@@ -3,6 +3,7 @@ title: "زبان برنامه نویسی جدید موجو"
 date: "1402-06-17"
 author: "Sabber"
 link: "https://twitter.com/sabber_dev/status/1699929598706720890"
+topic: "technology"
 ---
 
 امروز کامیونیتی انگلیسی پر شده از Mojo که در دسترس همه قرار گرفته، زبان برنامه نویسی جدیدی که از سینتکس پایتون درست شده و با کتابخونه های این زبان سازگاره.
