--- a/posts/tourism/بهشت-گمشده-ای-به-نام-روستای-اخلمد.md
+++ b/posts/tourism/بهشت-گمشده-ای-به-نام-روستای-اخلمد.md
@@ -3,6 +3,7 @@ title: "بهشت گمشده ای به نام روستای اخلمد"
 date: "1402-06-17"
 author: "NIL@@@FAR zahedi"
 link: "https://twitter.com/nilooofar/status/1697823268571361517"
+topic: "tourism"
 ---
 
 بهشت گمشده ای به نام روستای اخلمد
