--- a/posts/tourism/زیبایی-جاده-چالوس.md
+++ b/posts/tourism/زیبایی-جاده-چالوس.md
@@ -3,6 +3,7 @@ title: "زیبایی جاده چالوس"
 date: "1402-06-17"
 author: "🇮🇷 yas_Fatemi"
 link: "https://twitter.com/hooraa_Egh/status/1697129836072882549"
+topic: "tourism"
 ---
 
 زیبایی جاده چالوس،
