--- a/posts/tourism/عکسی-زیبا-از-ساحل-بندر-مقام.md
+++ b/posts/tourism/عکسی-زیبا-از-ساحل-بندر-مقام.md
@@ -3,6 +3,7 @@ title: "عکسی زیبا از ساحل بندر مقام"
 date: "1402-06-17"
 author: "Iran land"
 link: "https://twitter.com/Iranland7/status/1698340266120257942"
+topic: "tourism"
 ---
 
 ساحل زیبای بندر مقام، هرمزگان
