--- a/posts/art/کنسرت-محمدرضا-شجریان-در-حافظیه-سال-56.md
+++ b/posts/art/کنسرت-محمدرضا-شجریان-در-حافظیه-سال-56.md
@@ -3,6 +3,7 @@ title: "کنسرت محمدرضا شجریان در حافظیه سال 56"
 date: "1402-06-16"
 author: "میر خن سار"
 link: "https://twitter.com/Saoshy/status/1699837859619041674"
+topic: "art"
 ---
 
 حُسنت به اتفاق ملاحت جهان گرفت
