--- a/posts/politic/حمایت-فرماندار-داکوتای-جنوبی-از-دونالد-ترامپ.md
+++ b/posts/politic/حمایت-فرماندار-داکوتای-جنوبی-از-دونالد-ترامپ.md
@@ -3,6 +3,7 @@ title: "حمایت فرماندار داکوتای جنوبی از دونالد 
 date: "1402-06-18"
 author: "امیرعلی ابوالفتح Amir.A Abolfath"
 link: "https://twitter.com/Abolfath/status/1700397744395821112"
+topic: "politic"
 ---
 
 با حمایت کریستی نوئم، فرماندار داکوتای جنوبی از دونالد ترامپ، تعداد فرمانداران حامی رییس جمهوری سابق آمریکا در انتخابات ریاست جمهوری 2024 به چهار تن افزایش یافت؛ به همراه حداقل 10 سناتور و 76 عضو مجلس نمایندگان
