--- a/posts/social/مگر-نمی-شود-آدم-سال-های-بعد-را-به-یاد-آورد-و-برای-خودش-گریه-کند؟.md
+++ b/posts/social/مگر-نمی-شود-آدم-سال-های-بعد-را-به-یاد-آورد-و-برای-خودش-گریه-کند؟.md
@@ -3,6 +3,7 @@ title: "مگر نمی شود آدم سال های بعد را به یاد آور
 date: "1402-06-18"
 author: "میم هستم"
 link: "https://twitter.com/AynAlefMim/status/1404872614523322369"
+topic: "social"
 ---
 
 عباس معروفی توی کتاب "سال بلوا" یه مونولوگ خیلی معروف داره که میگه:
