--- a/posts/sport/دریبل-زیبای-رونالدینیو-در-19-سالگی.md
+++ b/posts/sport/دریبل-زیبای-رونالدینیو-در-19-سالگی.md
@@ -1,8 +1,9 @@
 ---
 title: "دریبل زیبای رونالدینیو در 19 سالگی"
 date: "1402-06-15"
-author: "تا خرتناق فوتبالی"
+author: "⚽️ تا‌‌ خرتناق فوتبالی ⚽️"
 link: "https://twitter.com/taakhertenagh/status/1699327489972060226"
+topic: "sport"
 ---
 
 سال 1999 رونالدینیو 19 ساله دونگا 35 ساله رو جلوی خودش می بینه و یکی از معروف ترین و قشنگ ترین دریبل های تاریخ فوتبال برزیل رو مقابلش انجام میده.
