--- a/posts/sport/کوتینیو-به-صورت-قرضی-به-الدحیل-پیوست.md
+++ b/posts/sport/کوتینیو-به-صورت-قرضی-به-الدحیل-پیوست.md
@@ -3,6 +3,7 @@ title: "کوتینیو به صورت قرضی به الدحیل پیوست"
 date: "1402-06-18"
 author: "⚽️ تا‌‌ خرتناق فوتبالی ⚽️"
 link: "https://twitter.com/taakhertenagh/status/1700199747498164729"
+topic: "sport"
 ---
 
 رسمی: کوتینیو به صورت قرضی از استون ویلا به الدحیل پیوست.
